--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,69 @@
 // Specific CSS for your home-page
 // Logo
+html {
+  scroll-behavior: smooth;
+ }
+
+.scroll-down {
+  opacity: 1;
+  -webkit-transition: all .5s ease-in 3s;
+  transition: all .5s ease-in 3s;
+}
+
+.scroll-down {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  margin-left: -16px;
+  display: block;
+  width: 32px;
+  height: 32px;
+  border: 2px solid #FFF;
+  background-size: 14px auto;
+  border-radius: 50%;
+  z-index: 2;
+  -webkit-animation: bounce 2s infinite 2s;
+  animation: bounce 2s infinite 2s;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  transform: scale(1)
+}
+
+.scroll-down:before {
+    position: absolute;
+    top: calc(50% - 8px);
+    left: calc(50% - 6px);
+    transform: rotate(-45deg);
+    display: block;
+    width: 12px;
+    height: 12px;
+    content: "";
+    border: 2px solid white;
+    border-width: 0px 0 2px 2px;
+}
+
+@keyframes bounce {
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  60% {
+    -webkit-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+}
+
 .info-title {
   font-family: Nunito;
   color: $bold-green;
@@ -11,6 +75,7 @@
 
 .banner-wrapper {
   text-align: center;
+  height: 500px;
 }
 
 .form-homepage {
@@ -19,7 +84,7 @@
 
 .logoHome {
   width: 200px;
-  margin: 30vh 0 75px;
+  margin: 30vh 0 60px;
 }
 
 
@@ -104,8 +169,8 @@
   margin: 0;
  }
 
-.homepage-info {
-  margin-top: 16px;
+#homepage-info {
+margin-top: 16px;
 }
 
 .card-info {
@@ -137,10 +202,8 @@ h2 {
 
 p {
   line-height: 32px;
+
 }
 #wasted {
   height: 522px;
 }
-
-
-
