--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,11 +12,6 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <%= link_to basket_path(@basket) do %>
-          <li class="basket-icon">
-          <i class="fas fa-shopping-cart"></i>
-          </li>
-          <% end %>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/LSchemuth", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -60,11 +55,15 @@
       <h1>Explore healthy and sustainable recipes with <strong style="color: #5A8F28;">CookClever</strong></h1>
       <p style="opacity: 0.8">Find tasty recipes and save food from being wasted</p>
 
+
+      <section>
+        <a href="#homepage-info" class="scroll-down" address="true"></a>
+      </section>
     </div>
   </div>
 </div>
 
-<div class="container homepage-info">
+<div class="container" id="homepage-info">
   <h1 class="info-title">How does CookClever work?</h1>
   <div class="row row-cols-1 row-cols-md-3">
     <div class="col mb-4">
